@@ -1,3 +1,12 @@
+2000-08-08  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
+
+	* netcomics: Rewrote the code that creates rlis based on file
+	names to use newly updated parse_name()
+	(parse_name): Updated returned list to include the date and
+	potentially the file number.
+	* html_templ/body_el[2-8].html: Added missing <A NAME=
+	statements.
+
 2000-08-07  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
 
 	* netcomics (dump_rli, load_rli, main): Added ability to
